--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,10 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/DragonFoxCollective/bevy-pretty-nice-menus"
 
 [features]
-default = []
+default = ["visibility"]
 pretty_nice_input = ["dep:bevy-pretty-nice-input"]
+visibility = ["bevy/bevy_camera"]
 
 [dependencies]
-bevy = { version = "0.17", default-features = false, features = [
-	"bevy_log",
-	"bevy_camera",
-] }
+bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
 bevy-pretty-nice-input = { version = "0.1.0", optional = true }
