--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_pretty_nice_menus"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2024"
 description = "A menu stack abstraction for Bevy"
 categories = ["game-development"]
@@ -15,5 +15,8 @@ pretty_nice_input = ["dep:bevy_pretty_nice_input"]
 visibility = ["bevy/bevy_camera"]
 
 [dependencies]
-bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
-bevy_pretty_nice_input = { version = "0.3.0", optional = true }
+bevy = { version = "0.17", default-features = false, features = [
+	"bevy_log",
+	"reflect_auto_register",
+] }
+bevy_pretty_nice_input = { version = "0.4.0", optional = true }
